@@ -21,17 +21,19 @@ import org.apache.camel.Producer;
 import org.apache.camel.RuntimeCamelException;
 import org.apache.camel.api.management.ManagedAttribute;
 import org.apache.camel.api.management.ManagedResource;
-import org.apache.camel.impl.DefaultEndpoint;
-import org.apache.camel.util.jsse.SSLContextParameters;
-import org.apache.cxf.endpoint.Server;
+import org.apache.camel.support.DefaultEndpoint;
+import org.apache.camel.support.jsse.SSLContextParameters;
 import org.apache.cxf.feature.AbstractFeature;
-import org.apache.cxf.frontend.ServerFactoryBean;
 import org.apache.cxf.headers.Header;
 import org.apache.cxf.interceptor.InterceptorProvider;
 import org.openehealth.ipf.commons.audit.AuditContext;
 import org.openehealth.ipf.commons.core.URN;
 import org.openehealth.ipf.commons.ihe.core.atna.AuditStrategy;
-import org.openehealth.ipf.commons.ihe.ws.*;
+import org.openehealth.ipf.commons.ihe.ws.JaxWsClientFactory;
+import org.openehealth.ipf.commons.ihe.ws.JaxWsServiceFactory;
+import org.openehealth.ipf.commons.ihe.ws.WsInteractionId;
+import org.openehealth.ipf.commons.ihe.ws.WsSecurityInformation;
+import org.openehealth.ipf.commons.ihe.ws.WsTransactionConfiguration;
 import org.openehealth.ipf.commons.ihe.ws.correlation.AsynchronyCorrelator;
 import org.openehealth.ipf.commons.ihe.ws.cxf.WsRejectionHandlingStrategy;
 import org.openehealth.ipf.commons.ihe.ws.cxf.audit.WsAuditDataset;
@@ -39,8 +41,8 @@ import org.openehealth.ipf.platform.camel.ihe.atna.AuditableEndpoint;
 import org.openehealth.ipf.platform.camel.ihe.core.AmbiguousBeanException;
 
 import javax.net.ssl.HostnameVerifier;
-import javax.net.ssl.SSLContext;
 import javax.xml.namespace.QName;
+
 import java.util.List;
 import java.util.Map;
 
@@ -109,13 +111,13 @@ public abstract class AbstractWsEndpoint<
 
     private AuditContext auditContext;
     private AsynchronyCorrelator<AuditDatasetType> correlator = null;
-    private InterceptorProvider customInterceptors;
+    private final InterceptorProvider customInterceptors;
     private String homeCommunityId = null;
     private WsRejectionHandlingStrategy rejectionHandlingStrategy = null;
-    private List<AbstractFeature> features;
-    private List<String> schemaLocations;
-    private Class<? extends AbstractWebService> serviceClass;
-    private Map<String, Object> properties;
+    private final List<AbstractFeature> features;
+    private final List<String> schemaLocations;
+    private final Class<? extends AbstractWebService> serviceClass;
+    private final Map<String, Object> properties;
 
     private boolean secure;
     private SSLContextParameters sslContextParameters;
@@ -182,12 +184,12 @@ public abstract class AbstractWsEndpoint<
      * @return service class instance for the given endpoint.
      */
     public AbstractWebService getServiceInstance() {
-        AbstractWebService service = getCustomServiceInstance(this);
+        var service = getCustomServiceInstance(this);
         if (service == null) {
             if (serviceClass != null) {
                 try {
-                    return serviceClass.newInstance();
-                } catch (InstantiationException | IllegalAccessException e) {
+                    return serviceClass.getDeclaredConstructor().newInstance();
+                } catch (ReflectiveOperationException e) {
                     throw new RuntimeException("Could not instantiate service of type " + serviceClass, e);
                 }
             } else {
@@ -420,8 +422,8 @@ public abstract class AbstractWsEndpoint<
 
     @Override
     public Consumer createConsumer(Processor processor) {
-        AbstractWebService serviceInstance = getServiceInstance();
-        ServerFactoryBean serverFactory = getJaxWsServiceFactory().createServerFactory(serviceInstance);
+        var serviceInstance = getServiceInstance();
+        var serverFactory = getJaxWsServiceFactory().createServerFactory(serviceInstance);
         if (features != null) {
             serverFactory.getFeatures().addAll(features);
         }
@@ -440,8 +442,8 @@ public abstract class AbstractWsEndpoint<
             }
         }
 
-        Server server = serverFactory.create();
-        AbstractWebService service = (AbstractWebService) serverFactory.getServiceBean();
+        var server = serverFactory.create();
+        var service = (AbstractWebService) serverFactory.getServiceBean();
         return new DefaultWsConsumer<>(this, processor, service, server);
     }
 
@@ -487,18 +489,18 @@ public abstract class AbstractWsEndpoint<
     }
 
     public WsSecurityInformation getSecurityInformation() {
-        SSLContextParameters sslContextParameters = getSslContextParameters();
+        var sslContextParameters = getSslContextParameters();
         if (sslContextParameters == null && secure) {
-            Map<String, SSLContextParameters> sslContextParameterMap = getCamelContext().getRegistry().findByTypeWithName(SSLContextParameters.class);
+            var sslContextParameterMap = getCamelContext().getRegistry().findByTypeWithName(SSLContextParameters.class);
             if (sslContextParameterMap.size() == 1) {
-                Map.Entry<String, SSLContextParameters> entry = sslContextParameterMap.entrySet().iterator().next();
+                var entry = sslContextParameterMap.entrySet().iterator().next();
                 sslContextParameters = entry.getValue();
             } else if (sslContextParameterMap.size() > 1) {
                 throw new AmbiguousBeanException(SSLContextParameters.class);
             }
         }
         try {
-            SSLContext sslContext = sslContextParameters != null ?
+            var sslContext = sslContextParameters != null ?
                     sslContextParameters.createSSLContext(getCamelContext()) :
                     null;
             return new WsSecurityInformation(secure, sslContext, hostnameVerifier, username, password);
